src/components/css/index.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

* {
  font-family: 'Poppins';
  box-sizing: border-box;
  font-size: 98%;
}

body {
  background: linear-gradient(to bottom, #fafeff, #f1fffe);
  overflow-x: clip;
}

.img-hidden {
  display: none;
}




.grid-container {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
  row-gap: 20px;
  column-gap: 30px;
  /* Adjust the gap between columns as needed */
}

@media screen and (max-width:768px) {
  .grid-container {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
    gap: 20px;
    /* Adjust the gap between columns as needed */
  }
}


.product-card {
  background: radial-gradient(from red to blue) !important;
}

.collapse {
  min-height: 100px;
  max-height: 200px;
  /* Set a value greater than the expected height of your content */
  transform-origin: top;
  transform: scaleY(0.05);
  transition: all 0.4s ease, max-height 0.4s ease;
  overflow: hidden;
}

.show {
  min-height: 100px;
  max-height: 200px;
  /* Set a value greater than the expected height of your content */
  transform-origin: top;
  transform: scaleY(1);
  transition: all 0.4s ease, max-height 0.4s ease;
  overflow: hidden;
}

.cart-text {
  transition: all 0.5s ease-out;
}


.product-buttons {
  /* 'fixed p-2 bottom-0 left-0 flex-row bg-white z-[99999999]' */
  position: fixed;
  padding: 2px;
  bottom: 0;
  left: 0;
  flex-direction: row;
  background: white;
  z-index: 99999999;
}

@media screen and (min-width:1024px) {
  .product-buttons {
    position: static;
    flex-direction: row;
    background-color: transparent;
  }
}

/* ${width<768?'':'static'} */

.price-component {
  /* fixed; bottom-[9.9vh] border-t bg-white border-gray-400 left-0 */
  position: fixed;
  bottom: 9.9vh;
  border-top: 1px solid rgb(89, 89, 89);
  background-color: white;
  left: 0;
}

@media screen and (min-width:1024px) {
  .price-component {
    position: static;
    background-color: transparent;
    border: none;
  }
}


.total-component {
  position: fixed;
  bottom: 0;
  left: 0;
  background-color: white;
  color: black;
  width: 100%;
}

@media screen and (min-width:1024px) {
  .total-component {
    position: sticky;
    box-shadow: 0 5px 10px 3px rgba(0, 0, 0, 0.2);
    top: 15vh;
    bottom: 5vh;
    right: 0;
    height: max-content;
    width: 25%;
    margin: 20px;
    box-sizing: border-box;
    padding: 10px;
    border-radius: 10px;
    font-size: 2rem;
    background-color: white;
    color: black;
  }
}

.item-grid {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 1rem;
  text-align: center;
}


@media screen and (min-width:1024px) {
  .item-grid {
    display: grid;
    width: 100%;
    grid-template-columns: 25% 25% 15% 35%;
    place-items: center;
  }

}






/* LOADER */

.loader {
  position: relative;
  width: 124px;
  height: 124px;
  border-radius: 10px;
}

.loader div {
  width: 8%;
  height: 24%;
  background: rgb(128, 128, 128);
  position: absolute;
  left: 50%;
  top: 30%;
  opacity: 0;
  border-radius: 50px;
  box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
  animation: fade458 1s linear infinite;
}

@keyframes fade458 {
  from {
    opacity: 1;
  }

  to {
    opacity: 0.25;
  }
}

.loader .bar1 {
  transform: rotate(0deg) translate(0, -130%);
  animation-delay: 0s;
}

.loader .bar2 {
  transform: rotate(30deg) translate(0, -130%);
  animation-delay: -1.1s;
}

.loader .bar3 {
  transform: rotate(60deg) translate(0, -130%);
  animation-delay: -1s;
}

.loader .bar4 {
  transform: rotate(90deg) translate(0, -130%);
  animation-delay: -0.9s;
}

.loader .bar5 {
  transform: rotate(120deg) translate(0, -130%);
  animation-delay: -0.8s;
}

.loader .bar6 {
  transform: rotate(150deg) translate(0, -130%);
  animation-delay: -0.7s;
}

.loader .bar7 {
  transform: rotate(180deg) translate(0, -130%);
  animation-delay: -0.6s;
}

.loader .bar8 {
  transform: rotate(210deg) translate(0, -130%);
  animation-delay: -0.5s;
}

.loader .bar9 {
  transform: rotate(240deg) translate(0, -130%);
  animation-delay: -0.4s;
}

.loader .bar10 {
  transform: rotate(270deg) translate(0, -130%);
  animation-delay: -0.3s;
}

.loader .bar11 {
  transform: rotate(300deg) translate(0, -130%);
  animation-delay: -0.2s;
}

.loader .bar12 {
  transform: rotate(330deg) translate(0, -130%);
  animation-delay: -0.1s;
}

